# trix

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitignore  AUTHORS.md  BUILDING.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE.md  README.md  SECURITY.md  STYLE.md  build.sh  chip8.cpp  runtests.sh  tetrix.cpp  trix.cpp  trix.h
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  clang-tidy.yml  codeql.yml  release.yml
benchmark/: .gitignore  PF2_RESULTS.md  README.md  bench_hash.cpp  bench_interpreter.trx  bench_journal_write.trx  bench_journal_write2.trx  gen_bench.py  release.sh  timer.py
docs/: actors.md  binary-pack.md  chrono.md  cli.md  closures.md  collections.md  continuation.md  contracts.md  cookbook.md  coroutines.md  curry-thunk.md  debugger.md  dev-adding-operators.md  dev-architecture.md  dev-control-operators.md  dev-glossary.md  dev-invariants.md  dev-testing.md  dwarf.md  effects.md  error-handling.md  errors-cheatsheet.md  format-cheatsheet.md  from-postscript.md  functional-programming.md  genserver.md  getting-started.md  gvm-heap-gc.md  host-integration.md  ieee754.md  index.md  infix-design.md  interpreter.md  lazy-sequences.md  local-global-vm.md  logic.md  modules.md  name-lookup.md  operator-cheatsheet.md  pattern-matching.md  (+22 more)
examples/: README.md  amazing-manual.md  amazing.trx  bestagon-design.md  bestagon-tdd.md  birthdays.trx  chip8-asm.trx  chip8-manual.md  chip8.trx  debugger_tour.trx  effects_mini_scheme.trx  gallery.sh  genealogy.trx  heist.trx  keytest.trx  log-timestamp.trx  markov.trx  mini-scheme.trx  minidb.trx  raycaster.trx  reactive-financial-model.trx  regex.trx  schedule-rules.txt  schedule.trx  screen-demo.trx  sudoku-puzzles.txt  sudoku-stress-tests.txt  sudoku.trx  supervised-word-count.trx  symdiff.trx  tetrix.trx  village.trx  zmachine-manual.md  zmachine.trx
examples/bestagon-proto/: proto-ai-v2-perf.trx  proto-capture.trx  proto-fog-perf.trx  proto-hex-math.trx  proto-loader.trx  proto-mapgen.trx  proto-pathfind.trx  proto-render-gate.trx  proto-screen-wireframe.trx
examples/bestagon-scenarios/: tutorial.bw
examples/bestagon-sim/: README.md  combat-core.trx  damage-matrix.trx  economy-curves.trx  luck-variance.trx  pacing-sim.trx  vet-distribution.trx
examples/chip8-roms/: README.md  fetch-ch8.py
examples/markov-corpus/: pride-ch1-2.txt
examples/mask-shapes/: README.md  trix-logo.trx
examples/maze-gallery/: README.md
examples/word-count-corpus/: poison.txt  sonnet-18.txt  sonnet-29.txt  sonnet-73.txt
examples/zmachine/: CATALOG.md  blorb-extract.py  fetch-stories.py
fuzz/: README.md  build.sh  fuzz_trix.cpp  run.sh  triage.sh
fuzz/seeds/: actor_basic.trx  actor_mailbox.trx  actor_recv_match.trx  actor_recv_timeout.trx  actor_spawn.trx  actor_try_send.trx  arith_int128.trx  arith_mod.trx  array_filter.trx  array_len.trx  array_map.trx  array_sort.trx  bind_into_dict.trx  bind_locals.trx  bit_and.trx  bit_or.trx  bit_popcount.trx  bit_query.trx  bit_rotate.trx  bit_shift.trx  bit_xor.trx  bitwise.trx  block_comment.trx  bool_and.trx  bool_or.trx  bool_xor.trx  bytes_to_sink.trx  cell_combine_wide.trx  chrono_calendar_ops.trx  chrono_fscan_fmt.trx  chrono_instant_accessors.trx  chrono_print_fmt.trx  chrono_scan_fmt.trx  closure_bind.trx  closure_capture.trx  closure_with_dict.trx  compare.trx  continuation_abort_exec.trx  continuation_capture_locals.trx  continuation_delimit.trx  (+392 more)
lib/: ansi.trx  debugger.trx  dwarf.trx  keys.trx  screen.trx
src/: api.inl  binary_tokens.inl  binding_table.inl  build_config.inl  chrono.inl  dict.inl  dispatch.inl  enums.inl  gc.inl  gvm_heap.inl  hash.inl  init.inl  interpreter.inl  member_vars.inl  name.inl  number.inl  object.inl  op_descriptor.inl  op_effects.inl  ops_actor.inl  ops_array.inl  ops_array_iteration.inl  ops_bitwise.inl  ops_chrono.inl  ops_continuation.inl  ops_convert.inl  ops_coroutine.inl  ops_debugger.inl  ops_dict.inl  ops_dwarf.inl  ops_effect.inl  ops_flow.inl  ops_format.inl  ops_genserver.inl  ops_higher.inl  ops_lazy.inl  ops_logic.inl  ops_match.inl  ops_math.inl  ops_memory.inl  (+31 more)
tests/: README.md  actor_snapshot_thaw.trx  backtrace_basic.trx  backtrace_basic.txt  backtrace_operands.trx  backtrace_operands.txt  backtrace_phase1_boundaries.trx  backtrace_sourceloc.trx  backtrace_sourceloc.txt  bench_unify_match_long_leaves.trx  check_doc_links.py  check_error_codes.py  check_operator_count.py  check_operator_shadows.py  check_operator_throws.py  check_readme_examples.py  dwarf_be.trx  dwarf_big.trx  dwarf_fixture.cpp  dwarf_fixture_b.cpp  dwarf_fixture_big.cpp  dwarf_l21_probe.cpp  dwarf_layout.trx  dwarf_self_peek.trx  dwarf_so_peek.trx  eqref_binding_snapshot_thaw.trx  error_codes.sh  frame_dict_snapshot_thaw.trx  gc_localdict_snapshot_thaw.trx  gen_dwarf_be_fixture.py  memory_stream_snapshot_thaw.trx  module_helper_a.trx  module_helper_b.trx  require_circular.trx  require_helper_a.trx  require_helper_b.trx  run_all.sh  run_backtrace_tests.sh  run_cli_tests.sh  run_dwarf_tests.sh  (+287 more)
tests/cli/: break-on-error-actor.trx  break-on-error.trx  echo-args.trx  loop.trx  make-image.trx  ok.trx  op-full.trx  resident.trx  sleep-huge.trx  status-name-buckets.trx  status-stream-buffer.trx  status-userdict.trx  vm-starve.trx
tests/fuzz_regressions/: README.md  crash-51eedf42afcaaabf153b5c8fc73401b2594d8586  crash-5e96a01cbeb341d6042b8dd6998907704f81d088  crash-b40add343be2c72e88b7b804e09d03f377b9d857  crash-c722248476d2a23df347eb9a03bf8aee15cfa5d8  (+1 more)
tests/golden/: print_ops.trx  (+19 more)
tools/: README.md  align_code_comments.py  assert_blank_line.py  check_collection_facts.py  check_doc_examples.py  check_reference_facts.py  check_scanner_grammar.py  check_signed_char.py  check_type_facts.py  cpp_style.py  find_guard_returns.py  find_redundant_else.py  find_tail_return.py  format_md_tables.py  gen_mask_svg.py  gen_op_effects.py  make_trix_logo.py  migrate_dollar_dollar.py  migrate_g_to_dollar.py
(+17 files in other folders)
